UserService ve IUserService oluşturuldu. UserController açıldı ve Create Action method eklendi ve test edildi.

--- a/ApplicationLayer/ApplicationLayer.csproj
+++ b/ApplicationLayer/ApplicationLayer.csproj
@@ -7,14 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Models\DTOs\**" />
-    <EmbeddedResource Remove="Models\DTOs\**" />
-    <None Remove="Models\DTOs\**" />
+    <Folder Include="Models\ViewModels\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\ViewModels\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\InfrastructureLayer\InfrastructureLayer.csproj" />
   </ItemGroup>
 
 </Project>
