--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EnvironmentSettings": {
+    "ASPNETCORE_ENVIRONMENT": "Development"
+  }
 }
+
