UserLoginDTO'lar UserLogin actionları, kullanıcı logout actionu kullanıcı bulma, kullanıcı onaylama metotları, JWT kullanımı ve Authorize işlemi

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,13 @@
 {
+
+  "JWT": {
+    "Key": "BitirmeProjesiYapiyoruzTakimimizCokIyi",
+    "Issuer": "www.plasticproject.com",
+    "Audience": "www.visitors.com",
+    "Expiration": 60
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +17,9 @@
   "AllowedHosts": "*",
   "EnvironmentSettings": {
     "ASPNETCORE_ENVIRONMENT": "Development"
+
+    //"ConnectionStrings": {
+    //  "DefaultConnection": "Server=TANRIVERDI-TR\\SQLEXPRESS;Initial Catalog=DENEMEPROJE;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   }
 }
 
