Merve ve Yasinden en son alınanlar.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
   "EnvironmentSettings": {
     "ASPNETCORE_ENVIRONMENT": "Development"
+  },
+
+  "Jwt": {
+    "Issuer": "MyIssuer",
+    "Audience": "MyAudience",
+    "Key": "SuperSuperSecretKeyWithAtLeast32Characters!" // 16 veya 32 byte uzunluğunda bir anahtar
   }
 }
-
